tests/ui/err/error-passthrough.rs
#[logcall::logcall]
fn f() {}

#[logcall::logcall]
fn f() {}

fn main() {}
